# farcry-sdk

./: .gitattributes  .gitignore  .mcp.json  LICENSE  README.md
.github/workflows/: docs.yml  jackall-ci.yml  jackall-release.yml
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: intro.md
docs/docs/engine-internals/: _category_.json  command-line-args.md  function-registry.md  launcher-exe.md  lua-api-surface.md  overview.md  save-data-path.md
docs/docs/file-formats/: _category_.json  archives-fat-dat.md  depload.md  fcb.md  mgb.md  savegame.md  sbao.md  sdat.md  spk.md  xbm-xbg.md
docs/docs/modding/: _category_.json  data-recipes.md  engine-theory.md  file-manifest.md  getting-started.md  gotchas.md  mods-survey.md  sources.md
docs/docs/modding/guide/: _category_.json  buddies.md  cheats.md  controls.md  dlc.md  editing-setup.md  enemies.md  file-management.md  gadgets.md  graphics.md  index.md  misc.md  mission-rewards.md  patrols.md  player-character.md  quick-steps.md  shop.md  sound.md  tools.md  ui-hud.md  vehicles.md  weapons.md  world-objects.md
docs/src/components/HomepageFeatures/: index.js
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css  todos.md  tools.md
reverse/: Finding FOV bytes via HEX editing.docx  patch_carJoke.py  patch_incHB.py  patch_toRed.py
reverse/ghidra/: Dunia.dll.gzf  FarCry2.exe.gzf  FarCry2_server.gzf
tools/JackAll/: Clean.ps1  JackAll.slnx  LICENSE  README.md
tools/JackAll/assets/: Download ffmpeg.url  binary_classes.xml  savegame_field_names.tsv  vanilla_hashes.ini
tools/JackAll/src/JackAll.App/: App.xaml  App.xaml.cs  AppConfig.cs  JackAll.App.csproj  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  VanillaHashesProvider.cs
tools/JackAll/src/JackAll.App/Audio/: FfmpegAudio.cs
tools/JackAll/src/JackAll.App/FileHandlers/: FileHandlerCatalog.cs
tools/JackAll/src/JackAll.App/SaveGames/: SaveDetailsViewModel.cs  SaveGameCompiledFieldNames.cs  (+3 more)
tools/JackAll/src/JackAll.Cli/: JackAll.Cli.csproj  Program.cs
tools/JackAll/src/JackAll.Core/: GameInstall.cs  JackAll.Core.csproj  VanillaHashes.cs
tools/JackAll/src/JackAll.Core.Tests/: Diff3Tests.cs  EndToEndTests.cs  FatArchiveTests.cs  FcbAssemblerTests.cs  FcbDocumentTests.cs  FcbStringCorpusTests.cs  FcbValueCodecTests.cs  FcbXmlTests.cs  GameCacheTests.cs  GameVfsFragmentOverrideTests.cs  JackAll.Core.Tests.csproj  LegacyPatchImporterTests.cs  Lzo1xTests.cs  MgbBodyTests.cs  MgbHeaderTests.cs  MgbSurveyTests.cs  MgbSyntheticTests.cs  PatchBuilderTests.cs  RmlDocumentTests.cs  SaveGameDocumentTests.cs  SbaoAudioTests.cs  SdatSectorTests.cs  SpkPackageTests.cs  TestSupport.cs  XbmMaterialTests.cs  XbtTextureTests.cs
tools/misc/DiscordChatExporter/: README.md  compact_export.py
tools/misc/format-samples/: .gitignore
tools/misc/hash-lists/: dlc1.filelist  dlc_jungle.filelist  entitylibrary.filelist  map_files.filelist  patch.filelist  worlds_english.filelist
tools/misc/modpatcher/: CMakeLists.txt  README.md  build.ps1
tools/misc/modpatcher/Loose/: README.md
tools/misc/modpatcher/src/: dllmain.cpp  dunia.cpp  dunia.h  hook_findandopen.cpp  hook_findandopen.h  hook_vfs.cpp  hook_vfs.h  log.cpp  log.h  loose_index.cpp  loose_index.h  proxy_exports.cpp  proxy_exports.h
tools/misc/sbao/: README.md  sbao_tool.py
tools/misc/text-snippets/: CRC32_collisions.txt  Far_Cry_2_1.03_filediffs.txt  cloth_shader_disasm_example.txt  crc32_collision_examples.txt  dunia_internal_tool_plugins_list.txt  fcbconverter_collision_repro.txt  redux_readme.txt
(+75 files in other folders)
